Fixing annotations for BookShelfController, FineController, and PublisherController
